Bug 355992: |Assertion failure: strncmp(rval, js_function_str, 8) == 0 && rval[8] == ' '| with non-function setter, patch by Brian Crowder <crowder@fiverocks.com>, r=brendan