js/src/jsopcode.c
@@ -3860,17 +3860,27 @@ Decompile(SprintStack *ss, jsbytecode *pc, intN nb)
                               rval);
 #else
                 if (lastop == JSOP_GETTER || lastop == JSOP_SETTER) {
-                    LOCAL_ASSERT(strncmp(rval, js_function_str, 8) == 0 &&
-                                 rval[8] == ' ');
-                    rval += 8 + 1;
-                    LOCAL_ASSERT(rval[strlen(rval)-1] == '}');
-                    todo = Sprint(&ss->sprinter, "%s%s%s %s%s",
-                                  lval,
-                                  (lval[1] != '\0') ? ", " : "",
-                                  (lastop == JSOP_GETTER)
-                                  ? js_get_str : js_set_str,
-                                  xval,
-                                  rval);
+                    if (strncmp(rval, js_function_str, 8) || rval[8] != ' ') {
+                        todo = Sprint(&ss->sprinter, "%s%s%s%s%s:%s", lval,
+                                      (lval[1] != '\0') ? ", " : "", xval,
+                                      (lastop == JSOP_GETTER ||
+                                       lastop == JSOP_SETTER)
+                                        ? " " : "",
+                                      (lastop == JSOP_GETTER) ? js_getter_str :
+                                      (lastop == JSOP_SETTER) ? js_setter_str :
+                                      "",
+                                      rval);
+                    } else {
+                        rval += 8 + 1;
+                        LOCAL_ASSERT(rval[strlen(rval)-1] == '}');
+                        todo = Sprint(&ss->sprinter, "%s%s%s %s%s",
+                                      lval,
+                                      (lval[1] != '\0') ? ", " : "",
+                                      (lastop == JSOP_GETTER)
+                                      ? js_get_str : js_set_str,
+                                      xval,
+                                      rval);
+                    }
                 } else {
                     todo = Sprint(&ss->sprinter, "%s%s%s:%s",
                                   lval,
